[gd_scene load_steps=6 format=3 uid="uid://bgdywbrkt60lc"]

[ext_resource type="Script" uid="uid://c51484jy3nn0f" path="res://Game/ui/asteroid/cellular_player_board.gd" id="1_2jvp1"]
[ext_resource type="Texture2D" uid="uid://d6qu00stj66f" path="res://Assets/factory_floor.tres" id="2_6fdg1"]
[ext_resource type="PackedScene" uid="uid://qcnp7u3aieu4" path="res://Game/ui/asteroid/cellular_grid.tscn" id="2_xf4gk"]
[ext_resource type="PackedScene" uid="uid://d2yy8jnf0n7kd" path="res://Game/ui/asteroid/cell.tscn" id="3_6fdg1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_84gc3"]
bg_color = Color(0.906971, 0.43494, 0.418012, 1)

[node name="CellularPlayerBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2jvp1")
factory_texture = ExtResource("2_6fdg1")

[node name="VerticalListContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 224.0
offset_bottom = 556.0

[node name="Sky" type="Panel" parent="VerticalListContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_84gc3")

[node name="PlayerNameLabel" type="Label" parent="VerticalListContainer/Sky"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "name label"
horizontal_alignment = 1

[node name="FactoryAndMine" type="MarginContainer" parent="VerticalListContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 224)
layout_mode = 2
size_flags_vertical = 3

[node name="GameGrid" parent="VerticalListContainer/FactoryAndMine" instance=ExtResource("2_xf4gk")]
unique_name_in_owner = true
layout_mode = 2
cell_scene = ExtResource("3_6fdg1")
